Add new hyperlinks in unordered list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/gazpacho.html">Gazpacho</a>
+        <ol>
+            <li><a href="recipes/gazpacho.html">Gazpacho</a></li>
+            <li><a href="recipes/spanish-tortilla.html">Spanish Tortilla</a></li>
+            <li><a href="recipes/paella.html">Paella</a></li>
+        </ol>
+        
     </body>
 </html>
