Stylize the website with css
Add new font, stylize headers, specify size of images...

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="header">Odin Recipes</h1>
+        <img src="https://i.stack.imgur.com/C9hd4.jpg" class="center odinimg" alt="odin feasting with people and animals" id="odinimg">
         <ul>
-            <li><a href="recipes/gazpacho.html">Gazpacho</a></li>
-            <li><a href="recipes/spanish-tortilla.html">Spanish Tortilla</a></li>
-            <li><a href="recipes/paella.html">Paella</a></li>
+            <li><a href="pages/gazpacho.html">Gazpacho</a></li>
+            <li><a href="pages/spanish-tortilla.html">Spanish Tortilla</a></li>
+            <li><a href="pages/paella.html">Paella</a></li>
         </ul>
         
     </body>
